@@ -1,3 +1,8 @@
+2002-01-28  Ron Steinke  <rsteinke@w-link.net>
+
+	* glib/giochannel.c: Some documentation fixes/elaborations
+	I really should have gotten in a long time ago
+
 2002-01-24  Sven Neumann  <sven@gimp.org>
 
 	* glib/gutf8.c (g_utf8_to_utf16): removed an empty line in the
